# semi-automatic-annotation-tool

./: .index.js.swp  Dockerfile  Makefile  README  TODO  index.html  index.js  main.py  models.js  package.json  pyproject.toml  script.js  t  test.js
.github/: dependabot.yml
.github/workflows/: .workflow.yml.swp  delete-workflow-runs.yml  tests.yml  workflow.yml
docs/: CNAME  Makefile  index.html  script.js  style.css
python/: Dockerfile  main.py  pyproject.toml  requirements.txt
server/: .dockerignore  Dockerfile  Makefile  main.py  requirements.txt
test/: Makefile  package.json  test.js
