[project]
name = "UNKNOWN"
version = "0.0.0"
dependencies = [
	"Flask-Cors==3.0.10",
	"tensorflowjs==4.2.0",
]

[project.optional-dependencies]
dev = ["ruff==0.0.239"]

[tool.ruff]
select = ["A", "B", "BLE", "C", "C4", "COM", "E", "EM", "ERA", "F", "I", "ICN", "ISC", "N", "PD", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "Q", "RET", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W"]
ignore = ["B905", "C901", "E501", "PLR2004", "S101"]
fix = true
cache-dir = "bin/ruff"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
